#12246: fixed color contrast issue in modal header

--- a/profile/themes/os_admin/scss/components/_ui-dialog.scss
+++ b/profile/themes/os_admin/scss/components/_ui-dialog.scss
@@ -7,5 +7,6 @@
   }
   .ui-dialog-titlebar-close {
     border-color: $color-white;
+    color: $color-white;
   }
 }
